--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.8",
         "php-ffmpeg/php-ffmpeg": "^1.3",
         "spatie/laravel-permission": "^6.10",
+        "stripe/stripe-php": "^16.5",
         "twilio/sdk": "^8.3"
     },
     "require-dev": {
